--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,4 @@
 {
-	"recommendations": [
-		"editorconfig.editorconfig",
-		"esbenp.prettier-vscode"
-	],
+	"recommendations": ["editorconfig.editorconfig", "esbenp.prettier-vscode"],
 	"unwantedRecommendations": []
 }
