--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,29 @@
 		// Environment setup & latest features
 		"lib": ["ESNext"],
 		"target": "ESNext",
-		"module": "Preserve",
+		"module": "NodeNext",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
+		"moduleResolution": "nodenext",
 		"allowJs": true,
-
-		// Bundler mode
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
+		"resolveJsonModule": true,
 		"verbatimModuleSyntax": true,
-		"noEmit": true,
 
 		// Best practices
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true,
-		"noImplicitOverride": true
-	}
+		"noImplicitOverride": true,
+		"forceConsistentCasingInFileNames": true,
+
+		// Output
+		"rootDir": "./src",
+		"outDir": "./dist",
+		"declaration": true,
+		"declarationMap": true,
+		"sourceMap": true,
+		"types": ["node"],
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist", "**/__tests__"]
 }
